# TCD20-DP-MobileApp

./: .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .prettierignore  app.json  index.js  metro.config.js  package.json  tsconfig.json  webpack.config.js
android/: build.gradle  settings.gradle
android/app/: .gitignore  BUCK  build.gradle
android/app/src/debug/java/com/tcd20dpmobileapp/: ReactNativeFlipper.java
android/app/src/debug/java/ie/tcd/cs7cs5/invigilatus/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: .astylerc  CMakeLists.txt  doxygen.sh  doxygen_conf  gen_proto.sh  lint_style.sh
android/app/src/main/cpp/include/: IClassifier.h  IResultReporter.h  TripleBuffer.hpp  dlog.h  export.h  utils.h
android/app/src/main/cpp/src/: PostureClassify.cpp  PostureClassify_jni.cpp  main.cpp
android/app/src/main/cpp/src/camera/: Camera.cpp  Camera.h  FaceDetector.cpp  FaceDetector.h  cam_utils.cpp  cam_utils.h  camera.h  camera_jni.cpp  glUtils.cpp  glUtils.h  gl_utils.cpp  gl_utils.h  render_jni.cpp  utils.cpp  utils.h
android/app/src/main/cpp/src/ml/: PostureClassify.cpp  PostureClassify.h  PostureClassify_jni.cpp  utils.cpp
android/app/src/main/cpp/src/reporter/: JavaReporter.cpp  JavaReporter.h  NetworkReporter.cpp  NetworkReporter.h  ReporterMgr.cpp  ReporterMgr.h  reporter_jni.cpp  student.grpc.pb.cc  student.grpc.pb.h  student.pb.cc  student.pb.h  timestamp.pb.cc  timestamp.pb.h  utils.cpp
android/app/src/main/cpp/tests/: time_sampling.cpp
android/app/src/main/java/ie/tcd/cs7cs5/invigilatus/: ExpoPackage.kt  MainActivity.java  MainActivity.kt  MainApplication.java  MainApplication.kt  NativePackage.kt
android/app/src/main/java/ie/tcd/cs7cs5/invigilatus/ml/: PCJNI.kt  PCModule.kt
android/app/src/main/java/ie/tcd/cs7cs5/invigilatus/modules/: CamGLView.kt  CamGLViewMgr.kt  CamRenderer.kt  CameraModule.kt  MLModule.kt
android/app/src/main/java/ie/tcd/cs7cs5/invigilatus/video/: CamGLView.kt  CamGLViewMgr.kt  CamRenderer.kt  CameraModule.kt  GLView.kt  GLViewMgr.kt
android/app/src/main/proto/: student.proto
android/app/src/main/res/raw/: src_services_ml_assets_dummy.tflite
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/TCD20DPMobileApp/: Info.plist
ios/TCD20DPMobileApp.xcodeproj/: project.pbxproj
ios/TCD20DPMobileApp.xcodeproj/xcshareddata/xcschemes/: TCD20DPMobileApp.xcscheme
ios/TCD20DPMobileApp.xcworkspace/: contents.xcworkspacedata
ios/TCD20DPMobileApp/Base.lproj/: LaunchScreen.xib
src/: index.tsx  native_modules.d.ts
src/components/: AppDialog.tsx  AppHeader.tsx  DownloadModal.tsx  InfoBanner.tsx  LabelledOption.tsx  LoadingIndicator.tsx  MultiAvatar.tsx  PassMeter.tsx  Text.tsx  ThemeSwitch.tsx
src/components/BottomControl/: BeforeStart.tsx  ResultDisplay.tsx  index.tsx
src/components/ExamList/: ListItem.tsx  index.tsx
src/components/ResultDisplay/: index.tsx
src/containers/CameraScreen/: index.tsx
src/containers/DrawerContent/: index.tsx
src/containers/ExamsScreen/: ExamDetails.tsx  ExamListScreen.tsx  PastExam.tsx  PendingExam.tsx  index.tsx  page.tsx  saga.ts  slice.ts
src/containers/HomeScreen/: index.tsx
src/containers/LoginScreen/: index.tsx
src/containers/ProfileScreen/: CameraPref.tsx  index.tsx
src/containers/RegisterScreen/: index.tsx
src/containers/WelcomeScreen/: index.tsx
src/navigators/: AppNavigator.tsx  PostLoginNavigator.tsx  PreLoginNavigator.tsx  PreLoginNavigator.web.tsx  Root.tsx  ScreenDefs.ts
src/services/: loadModel.ts  native_modules.d.ts  types.ts
src/services/api/: signUpIn.proto  student.proto
src/services/auth/: index.ts  refresh.ts  signupinout.ts  slice.ts  state.ts
src/services/camera/: CameraGLView.ts  loadModel.ts  slice.ts
src/services/gen-proto/: signUpIn_pb.d.ts  signUpIn_pb.js  signUpIn_pb_service.d.ts  signUpIn_pb_service.js  student_pb.d.ts  student_pb.js  student_pb_service.d.ts  student_pb_service.js
src/services/ml/: CameraGLView.web.tsx  PCService.d.ts  download.ts  index.ts  modelLoad.ts  nativeEvent.ts  slice.ts  types.spec.ts  types.ts  wrapper.ts
src/services/rpc/: ChunkParser.ts  index.ts  rpcClient.ts  websocket.ts
src/services/userdetail/: saga.ts  slice.ts  state.ts
src/store/: configureStore.ts  injector-typings.ts  preferences.ts  reducers.ts  store.test.ts  types.ts
src/store/UserDetail/: slice.ts  state.ts
src/theme/: MockTheme.tsx  ThemeProvider.tsx  slice.ts  themes.ts
src/utils/: FormFields.ts  loadable.tsx
src/utils/redux-injectors/: reducerInjectors.js
